@@ -13,7 +13,8 @@ The release team should empty this file after each release.
 
 ***
 
-REPLACE ME WITH CONTENT...
+Switched the MP lobby to the new lobby made by ilor during his GSoC 2009
+project.
 
 ***
 
